--- a/index.html
+++ b/index.html
@@ -15,19 +15,34 @@
             <label for="Monthly-traffic" class="labels"
               >Your Avg. Monthly Traffic:</label
             >
-            <input type="number" id="Monthly-traffic" class="inputs" />
+            <input
+              type="number"
+              id="Monthly-traffic"
+              class="inputs"
+              value="1000"
+            />
           </div>
           <div class="input-box">
             <label for="Monthly-orders" class="labels"
               >Your Avg. Monthly Orders:</label
             >
-            <input type="number" id="Monthly-orders" class="inputs" />
+            <input
+              type="number"
+              id="Monthly-orders"
+              class="inputs"
+              value="100"
+            />
           </div>
           <div class="input-box">
             <label for="Monthly-revenue" class="labels"
               >Your Avg. Monthly Revenue:</label
             >
-            <input type="number" id="Monthly-revenue" class="inputs" />
+            <input
+              type="number"
+              id="Monthly-revenue"
+              class="inputs"
+              value="10000"
+            />
           </div>
         </div>
         <div class="right-container">
@@ -70,15 +85,15 @@
             A <span class="ROI-percent">(ROI%)</span> Return On Investment!!!!!
           </h2>
           <p>
-            With a <span id="slider-value" class="red">(slider%)</span> increase
-            in your conversion rates after utilizing our CRO services, you will
+            With a <span id="slider-value" class="red">_____</span> increase in
+            your conversion rates after utilizing our CRO services, you will
             generate
-            <span id="result-amount" class="red">(result amount)</span>
+            <span id="result-amount" class="red">_____</span>
             incremental revenue in
-            <span class="selected-time red">(time)</span> , Post
-            <span class="selected-time">(time)</span> the ROI on our services is
-            <span id="ROI" class="red">(ROI)</span
-            ><span class="ROI-percent red">(ROI%)</span>
+            <span class="selected-time red">3 months</span> , Post
+            <span class="selected-time">3 months</span> the ROI on our services
+            is <span id="ROI" class="red">_____</span
+            ><span class="ROI-percent red">_____</span>
           </p>
         </div>
       </div>
