added few modifications

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               type="number"
               id="Monthly-traffic"
               class="inputs"
-              value="1000"
+              value="100000"
             />
           </div>
           <div class="input-box">
@@ -30,7 +30,7 @@
               type="number"
               id="Monthly-orders"
               class="inputs"
-              value="100"
+              value="5000"
             />
           </div>
           <div class="input-box">
@@ -41,7 +41,7 @@
               type="number"
               id="Monthly-revenue"
               class="inputs"
-              value="10000"
+              value="247000"
             />
           </div>
         </div>
@@ -90,10 +90,10 @@
             generate
             <span id="result-amount" class="red">_____</span>
             incremental revenue in
-            <span class="selected-time red">3 months</span> , Post
-            <span class="selected-time">3 months</span> the ROI on our services
-            is <span id="ROI" class="red">_____</span
-            ><span class="ROI-percent red">_____</span>
+            <span class="selected-time red">_</span> , Post
+            <span class="selected-time">_</span> the ROI on our services is
+            <span id="ROI" class="red">_</span
+            ><span class="ROI-percent red">_</span>
           </p>
         </div>
       </div>
