--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <input
               type="range"
               id="slider"
-              min="0"
+              min="1"
               max="100"
               step="1"
               value="30"
@@ -82,18 +82,17 @@
         <h1 class="logo">ROI</h1>
         <div class="dynamic-text">
           <h2>
-            A <span class="ROI-percent">(ROI%)</span> Return On Investment!!!!!
+            Approx <span class="ROI-percent"></span> Return On Investment!!!!!
           </h2>
           <p>
-            With a <span id="slider-value" class="red">_____</span> increase in
-            your conversion rates after utilizing our CRO services, you will
-            generate
-            <span id="result-amount" class="red">_____</span>
+            With a <span id="slider-value" class="red"></span> increase in your
+            conversion rates after utilizing our CRO services, you will generate
+            <span id="result-amount" class="red"></span>
             incremental revenue in
-            <span class="selected-time red">_</span> , Post
-            <span class="selected-time">_</span> the ROI on our services is
-            <span id="ROI" class="red">_</span
-            ><span class="ROI-percent red">_</span>
+            <span class="selected-time red"></span> , Post
+            <span class="selected-time"></span> the ROI on our services is
+            <span id="ROI" class="red"></span
+            ><span class="ROI-percent red"></span>
           </p>
         </div>
       </div>
