few minor edits

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <h1 class="logo">ROI</h1>
         <div class="dynamic-text">
           <h2>
-            Approx <span class="ROI-percent"></span> Return On Investment!!!!!
+            A <span id="ROI-percent" class="red"></span> Return On
+            Investment!!!!!
           </h2>
           <p>
             With a <span id="slider-value" class="red"></span> increase in your
@@ -91,8 +92,7 @@
             incremental revenue in
             <span class="selected-time red"></span> , Post
             <span class="selected-time"></span> the ROI on our services is
-            <span id="ROI" class="red"></span
-            ><span class="ROI-percent red"></span>
+            <span id="ROI" class="red"></span>
           </p>
         </div>
       </div>
